--- a/arch/x86/configs/wsl2_defconfig
+++ b/arch/x86/configs/wsl2_defconfig
@@ -24,7 +24,6 @@ CONFIG_RT_GROUP_SCHED=y
 CONFIG_CGROUP_PIDS=y
 CONFIG_CGROUP_RDMA=y
 CONFIG_CGROUP_FREEZER=y
-CONFIG_CGROUP_HUGETLB=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_CPUACCT=y
@@ -50,16 +49,15 @@ CONFIG_X86_X2APIC=y
 CONFIG_HYPERVISOR_GUEST=y
 CONFIG_PARAVIRT_SPINLOCKS=y
 # CONFIG_KVM_GUEST is not set
-CONFIG_MCORE2=y
+CONFIG_MZEN2=y
 CONFIG_PROCESSOR_SELECT=y
+# CONFIG_CPU_SUP_INTEL is not set
 # CONFIG_CPU_SUP_HYGON is not set
+# CONFIG_CPU_SUP_CENTAUR is not set
 # CONFIG_CPU_SUP_ZHAOXIN is not set
-CONFIG_NR_CPUS=256
-# CONFIG_SCHED_MC_PRIO is not set
+CONFIG_NR_CPUS=16
 # CONFIG_X86_MCE is not set
-# CONFIG_PERF_EVENTS_INTEL_UNCORE is not set
 # CONFIG_PERF_EVENTS_INTEL_RAPL is not set
-# CONFIG_PERF_EVENTS_INTEL_CSTATE is not set
 # CONFIG_PERF_EVENTS_AMD_UNCORE is not set
 # CONFIG_X86_IOPL_IOPERM is not set
 # CONFIG_MICROCODE is not set
@@ -72,6 +70,8 @@ CONFIG_EFI_MIXED=y
 CONFIG_HZ_100=y
 CONFIG_PHYSICAL_ALIGN=0x1000000
 CONFIG_LEGACY_VSYSCALL_NONE=y
+# CONFIG_PAGE_TABLE_ISOLATION is not set
+# CONFIG_RETPOLINE is not set
 CONFIG_SLS=y
 # CONFIG_SUSPEND is not set
 # CONFIG_ACPI_SPCR_TABLE is not set
@@ -86,12 +86,11 @@ CONFIG_ACPI_NFIT=y
 CONFIG_CPU_FREQ=y
 # CONFIG_PCI_MMCONFIG is not set
 CONFIG_IA32_EMULATION=y
-CONFIG_X86_X32_ABI=y
 CONFIG_KVM=y
-CONFIG_KVM_INTEL=y
 CONFIG_KVM_AMD=y
 CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
+CONFIG_LTO_CLANG_FULL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
@@ -115,6 +114,7 @@ CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=65536
 CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_DEFERRED_STRUCT_PAGE_INIT=y
 CONFIG_ZONE_DEVICE=y
 CONFIG_USERFAULTFD=y
@@ -282,7 +282,6 @@ CONFIG_NETLINK_DIAG=y
 CONFIG_NET_SWITCHDEV=y
 # CONFIG_PCPU_DEV_REFCNT is not set
 CONFIG_CGROUP_NET_PRIO=y
-CONFIG_NET_DROP_MONITOR=y
 # CONFIG_WIRELESS is not set
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
@@ -439,7 +438,6 @@ CONFIG_NVRAM=y
 # CONFIG_I2C_COMPAT is not set
 # CONFIG_I2C_HELPER_AUTO is not set
 # CONFIG_HWMON is not set
-# CONFIG_X86_PKG_TEMP_THERMAL is not set
 CONFIG_DRM=y
 CONFIG_DRM_VGEM=y
 # CONFIG_VGA_CONSOLE is not set
@@ -563,10 +561,10 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 CONFIG_SECURITY_DMESG_RESTRICT=y
 CONFIG_SECURITY=y
-CONFIG_HARDENED_USERCOPY=y
 CONFIG_FORTIFY_SOURCE=y
 CONFIG_SECURITY_LANDLOCK=y
 # CONFIG_INTEGRITY is not set
+CONFIG_LSM=""
 CONFIG_CRYPTO_DES=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_CTS=y
@@ -585,29 +583,12 @@ CONFIG_PRINTK_TIME=y
 CONFIG_CONSOLE_LOGLEVEL_DEFAULT=2
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=1
 # CONFIG_SYMBOLIC_ERRNAME is not set
-# CONFIG_DEBUG_MISC is not set
-CONFIG_DEBUG_INFO_DWARF5=y
-CONFIG_DEBUG_INFO_COMPRESSED_ZLIB=y
 # CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_SLUB_DEBUG is not set
-CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_PANIC_ON_OOPS=y
-CONFIG_SCHEDSTATS=y
-CONFIG_DEBUG_LIST=y
-CONFIG_DEBUG_SG=y
-CONFIG_DEBUG_NOTIFIERS=y
-CONFIG_DEBUG_CREDENTIALS=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
-# CONFIG_RCU_TRACE is not set
-CONFIG_FUNCTION_PROFILER=y
-CONFIG_STACK_TRACER=y
-CONFIG_SCHED_TRACER=y
-CONFIG_HWLAT_TRACER=y
-CONFIG_FTRACE_SYSCALLS=y
-CONFIG_TRACER_SNAPSHOT_PER_CPU_SWAP=y
 CONFIG_IO_STRICT_DEVMEM=y
 # CONFIG_X86_VERBOSE_BOOTUP is not set
-# CONFIG_X86_DEBUG_FPU is not set
 # CONFIG_RUNTIME_TESTING_MENU is not set
